<resources>
    <string name="app_name">MYHelloWorld</string>
    <string name="view_home">Accueil</string>
    <string name="view_map">Carte</string>
    <string name="view_share">Partage</string>
    <string name="view_qr">QR Code</string>
    <string name="share_facebook_label">Facebook</string>
    <string name="share_twitter_label">Twitter</string>
    <string name="share_other_label">Autres</string>
    <string name="view_news">Actualités</string>
</resources>
