<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_launcher_foreground"
        android:iconTint="@color/colorGrey"
        android:title="@string/view_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_launcher_foreground"
        android:iconTint="@color/colorGrey"
        android:title="@string/view_map" />

    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/view_share"
        android:iconTint="@color/colorGrey"/>

    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/view_share"
        android:iconTint="@color/colorGrey"/>

    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/ic_launcher_foreground"
        android:iconTint="@color/colorGrey"
        android:title="@string/view_qr" />

</menu>