<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >
    <ImageView
        android:src="@drawable/background_image_dark"
        tools:ignore="ContentDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_column="0"
        android:layout_row="0"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:id="@+id/share_facebook"
            android:layout_row="0"
            android:layout_column="0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:layout_row="0"
                android:layout_column="0"
                android:src="@drawable/facebook"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:id="@+id/share_facebook_label"
                android:text="@string/share_facebook_label"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                />

        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:id="@+id/share_twitter"
            android:layout_row="1"
            android:layout_column="0"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:layout_row="0"
                android:layout_column="0"
                android:src="@drawable/twitter"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:id="@+id/share_twitter_label"
                android:text="@string/share_twitter_label"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                />

        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:id="@+id/share_other"
            android:layout_row="2"
            android:layout_column="0"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:layout_row="0"
                android:layout_column="0"
                android:src="@drawable/share_other"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:id="@+id/share_other_label"
                android:text="@string/share_other_label"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                />

        </GridLayout>
    </GridLayout>
</GridLayout>
